@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.2.4', `28 January 2010', `3.3.51', `24 Mar 2010')
+__DOWNLOAD_INFO__(`3.2.4', `28 January 2010', `3.3.52', `1 Aug 2010')
 </div>
 
 <div class="section">
