@@ -46,6 +46,11 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 <h2>Current News</h2>
 
 <dl>
+<dt>August 1, 2010</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.3.52).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
 <dt>March 24, 2010</dt>
 <dd>A new snapshot of the current development version of Octave is
 available for ftp (3.3.51).  You should only be using this version if you are
@@ -61,26 +66,6 @@ strongly encouraged to use the tracker instead.</dd>
 Octave 3.2.4 is a bug-fixing release
 <a href="NEWS-3.2.html">NEWS</a> file for a list of
 user-visible changes in the 3.2.x series.</dd>
-<dt>September 21, 2009</dt>
-<dd>Version 3.2.3 has been released and is now available for ftp.
-Octave 3.2.3 is a bug-fixing release
-<a href="NEWS-3.2.html">NEWS</a> file for a list of
-user-visible changes in the 3.2.x series.</dd>
-<dt>September 12, 2009</dt>
-<dd>A new snapshot of the current development version of Octave is
-available for ftp (3.3.50).  You should only be using this version if you are
-interested in testing the latest features and don't mind hitting the
-occasional bug.</dd>
-<dt>July 22, 2009</dt>
-<dd>Version 3.2.2 has been released and is now available for ftp.
-Octave 3.2.2 is a bug-fixing release
-<a href="NEWS-3.2.html">NEWS</a> file for a list of
-user-visible changes in the 3.2.x series.</dd>
-<dt>June 6, 2009</dt>
-<dd>Version 3.2.0 has been released and is now available for ftp.
-Octave 3.2.0 is a major new release.  See the
-<a href="NEWS-3.2.html">NEWS</a> file for a list of
-user-visible changes.</dd>
 </dl>
 
 <p>For older news, see the
